--- a/style.css
+++ b/style.css
@@ -7,3 +7,33 @@
   font-weight: <weight>;
   font-style: normal;
 }*/
+* {
+    margin: 0;
+    padding: 0;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+.hidden {
+    display: none;
+}
+
+.container {
+    margin: 0 15px;
+}
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+.main_title {
+    padding: 30px 15px;
+    background-image: url(img/main_mobile.png);
+    min-height: 250px;
+    background-size: cover;
+    background-position: bottom;
+}
+.main_title_text {
+    max-width: 255px;
+    font-size: 30px;
+    font-weight: 800;
+}
